syntax = "proto3";

package logs;
option csharp_namespace = "CyberscopeAnalyzer";

service LogService {
    rpc SendLog (LogRequest) returns (LogResponse);
}

message LogRequest {
    string device_id = 1;
    string source_ip = 2;
    string destination_ip = 3;
    int32 source_port = 4;
    int32 destination_port = 5;
    int32 size = 6;
    string timestamp = 7;
    PacketType type = 8;
    int32 process_id = 9;
    string process_name = 10;
    string executable_path = 11;
    string file_hash = 12;
}

message LogResponse {
    string status = 1;
}

enum PacketType {
    TCP = 0;
    UDP = 1;
}